--- a/torcs/torcs/data/data/objects/tree1.ac
+++ b/torcs/torcs/data/data/objects/tree1.ac
@@ -1,57 +1,40 @@
 AC3Db
 MATERIAL "ac3dmat1" rgb 1 1 1  amb 0.2 0.2 0.2  emis 0 0 0  spec 0.5 0.5 0.5  shi 10  trans 0
 OBJECT world
-kids 1
+kids 2
 OBJECT poly
 name "rect"
-loc 0 2.5 0
-texture "/home/torcs/games/torcs/essai/tree1.rgb"
-numvert 8
--1.4 2.505 0
-1.4 2.505 0
-1.4 -2.505 0
--1.4 -2.505 0
-5.96046e-08 2.505 1.4
--5.96046e-08 2.505 -1.4
--5.96046e-08 -2.505 -1.4
-5.96046e-08 -2.505 1.4
-numsurf 6
-SURF 0x20
+loc 0 4 0
+texture "/home/torcs/runtime3/games/torcs/eee/tree1.rgb"
+numvert 4
+-2 4 0
+2 4 0
+2 -4 0
+-2 -4 0
+numsurf 1
+SURF 0x30
 mat 0
 refs 4
 3 0 0
 2 1 0
 1 1 1
 0 0 1
-SURF 0x20
-mat 0
-refs 3
-0 0 0
-3 0 0
-2 0 0
-SURF 0x20
-mat 0
-refs 3
-0 0 0
-1 0 0
-2 0 0
-SURF 0x20
+kids 0
+OBJECT poly
+name "rect"
+loc 0 4 -5.96046e-08
+texture "/home/torcs/runtime3/games/torcs/eee/tree1.rgb"
+numvert 4
+8.9407e-08 4 2
+-8.9407e-08 4 -2
+-8.9407e-08 -4 -2
+8.9407e-08 -4 2
+numsurf 1
+SURF 0x30
 mat 0
 refs 4
-7 0 0
-6 1 0
-5 1 1
-4 0 1
-SURF 0x20
-mat 0
-refs 3
-4 0 0
-7 0 0
-6 0 0
-SURF 0x20
-mat 0
-refs 3
-4 0 0
-5 0 0
-6 0 0
+3 0 0
+2 1 0
+1 1 1
+0 0 1
 kids 0
