*** empty log message ***

--- a/torcs/torcs/src/drivers/cylos1/Makefile
+++ b/torcs/torcs/src/drivers/cylos1/Makefile
@@ -14,7 +14,7 @@ SOURCES   = ${ROBOT}.cpp common.cpp
 
 DATADIR   = drivers/${ROBOT}
 
-DATA      = ${ROBOT}.xml car1.xml cg-nascar-rwd.rgb
+DATA      = ${ROBOT}.xml car1.xml cg-nascar-rwd.rgb logo.rgb
 
 DATASUBDIRS = tracksdata
 
