--- a/torcs/torcs/src/drivers/damned/2/Makefile
+++ b/torcs/torcs/src/drivers/damned/2/Makefile
@@ -19,6 +19,6 @@ ROBOT = damned
 
 DATADIR   = drivers/${ROBOT}/2
 
-DATA      =  car.xml buggy.rgb
+DATA      =  car.xml buggy.rgb logo.rgb
 
 include ${MAKE_DEFAULT}
