--- a/torcs/torcs/src/drivers/damned/8/Makefile
+++ b/torcs/torcs/src/drivers/damned/8/Makefile
@@ -20,7 +20,7 @@ ROBOT = damned
 
 DATADIR   = drivers/${ROBOT}/8
 
-DATA      =  car.xml
+DATA      =  car.xml logo.rgb
 
 include ${MAKE_DEFAULT}
 
