--- a/torcs/torcs/data/tracks/e-track-3/e-track-3.ac
+++ b/torcs/torcs/data/tracks/e-track-3/e-track-3.ac
@@ -42332,7 +42332,7 @@ numvert 507
 -80.0215 1.54125 21.796
 -6.23657 1.54125 98.508
 -172.694 1.54125 -43.6
-53.9795 -9.36685 263.508
+53.9796 -9.36685 263.508
 -92.7886 1.54125 3.00099
 -155.021 1.54125 -43.341
 -189.544 1.54125 -43.822
@@ -42358,7 +42358,7 @@ numvert 507
 45.6394 1.54125 118.548
 67.1895 1.54125 149.459
 -146.905 1.54125 -59.467
-89.7594 1.54125 184.043
+89.7593 1.54125 184.043
 9.03345 1.54125 37.61
 -122.724 1.54125 -48.043
 -47.4596 1.54125 -3.103
@@ -42374,7 +42374,7 @@ numvert 507
 56.6494 1.54125 81.603
 -155.734 1.54125 -73.817
 -22.5386 1.54125 -4.677
-80.2594 1.54125 110.183
+80.2593 1.54125 110.183
 -113.261 1.54125 -60.354
 103.989 1.54125 142.668
 -94.3956 1.54125 -57.631
@@ -42417,7 +42417,7 @@ numvert 507
 -156.411 1.54125 -101.611
 131.329 1.54125 65.164
 -115.131 1.54125 -90.689
-57.0094 1.54125 7.145
+57.0093 1.54125 7.145
 151.579 1.54125 96.074
 -88.7336 1.54125 -91.856
 191.049 -9.36685 226.47
@@ -42444,7 +42444,7 @@ numvert 507
 147.229 1.54125 32.007
 -148.946 1.54125 -115.248
 18.4804 1.54125 -49.318
-67.1394 1.54125 -14.171
+67.1393 1.54125 -14.171
 -109.304 1.54125 -104.612
 186.029 1.54125 92.105
 -94.9596 1.54125 -105.504
@@ -42502,7 +42502,7 @@ numvert 507
 -159.516 1.54125 -156.447
 -119.377 1.54125 -143.534
 -186.987 9.34635 -158.843
-64.1294 1.54125 -97.681
+64.1295 1.54125 -97.681
 -104.056 1.54125 -144.683
 109.589 1.54125 -63.869
 33.8094 1.54125 -117.419
@@ -42529,7 +42529,7 @@ numvert 507
 -153.752 9.36685 -172.301
 -97.8235 1.54125 -159.547
 65.7794 1.54125 -119.015
-85.2494 1.54125 -114.993
+85.2495 1.54125 -114.993
 -190.275 9.35995 -170.125
 40.3994 1.54125 -131.276
 -81.9396 1.54125 -161.427
@@ -42596,7 +42596,7 @@ numvert 507
 -116.231 9.36685 -198.257
 28.5194 1.54475 -176.231
 97.1895 1.54125 -154.977
-69.2494 1.54125 -166.429
+69.2495 1.54125 -166.429
 -95.9116 9.35865 -201.299
 14.3544 1.54475 -184.895
 0.19043 1.54475 -193.757
@@ -42695,16 +42695,16 @@ numvert 507
 22.7454 4.10605 -249.811
 -26.3206 7.29275 -251.43
 32.1995 3.97175 -250.235
-54.7694 1.54475 -233.239
+54.7693 1.54475 -233.239
 7.62042 5.36685 -253.475
 -17.2626 6.76845 -254.373
-77.1394 1.54455 -232.384
+77.1393 1.54455 -232.384
 115.849 1.54025 -229.17
 16.5684 4.79845 -256.252
 -8.20557 6.21815 -257.316
 95.9194 1.54285 -234.664
 43.1995 3.08075 -253.946
-54.8794 1.54645 -248.294
+54.8795 1.54645 -248.294
 66.2195 1.54485 -239.556
 25.6454 4.24045 -258.879
 0.852417 5.65235 -260.259
@@ -42718,7 +42718,7 @@ numvert 507
 18.9674 4.51555 -266.145
 51.0794 2.96455 -259.133
 67.6794 1.54805 -252.288
-96.6294 1.54165 -244.496
+96.6295 1.54165 -244.496
 44.3094 3.19685 -264.956
 28.0255 3.96525 -269.088
 59.8195 2.52565 -260.365
@@ -42728,9 +42728,9 @@ numvert 507
 78.3295 1.55095 -256.777
 37.0794 3.44095 -272.031
 53.1394 2.73215 -268.027
-69.8894 1.80505 -263.642
+69.8893 1.80505 -263.642
 116.269 1.53965 -253.771
-97.6294 1.53705 -255.666
+97.6295 1.53705 -255.666
 46.1394 2.95285 -274.974
 88.4194 1.55565 -261.642
 62.3295 2.31925 -270.804
@@ -42739,11 +42739,11 @@ numvert 507
 79.7195 1.64155 -267.651
 55.1995 2.51145 -277.917
 98.5594 1.51845 -267.158
-71.7295 1.96855 -274.06
-89.2295 1.59275 -272.237
+71.7296 1.96855 -274.06
+89.2296 1.59275 -272.237
 109.829 1.36685 -274.712
-64.2594 2.12705 -280.86
-80.9994 1.69035 -277.671
+64.2593 2.12705 -280.86
+80.9995 1.69035 -277.671
 122.739 1.36685 -279.446
 134.469 1.36685 -273.957
 98.1194 1.44415 -277.774
@@ -42754,7 +42754,7 @@ numvert 507
 104.639 1.36685 -285.504
 82.3694 1.57075 -286.746
 123.579 1.36685 -290.735
-96.8794 1.39325 -285.439
+96.8795 1.39325 -285.439
 108.409 1.36685 -295.207
 91.4294 1.41955 -289.689
 131.789 1.36685 -294.428
@@ -58481,7 +58481,7 @@ refs 3
 kids 0
 OBJECT group
 name "track"
-kids 484
+kids 500
 OBJECT poly
 name "tkMn 1"
 texture "tr-asphalt-l_nmm.rgb"
@@ -97185,13 +97185,13 @@ numvert 4
 1294.65 31.1406 -896.118
 1296.15 31.1406 -893.52
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97200,20 +97200,20 @@ refs 3
 kids 0
 OBJECT poly
 name "TuMk 2991"
-texture "turn100R.rgb"
+texture "back-sign.rgb"
 numvert 4
-1251.35 26.087 -871.118
-1252.85 26.087 -868.52
-1251.35 28.087 -871.118
-1252.85 28.087 -868.52
+1296.15 29.1406 -893.52
+1294.65 29.1406 -896.118
+1296.15 31.1406 -893.52
+1294.65 31.1406 -896.118
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97221,21 +97221,43 @@ refs 3
 3 1 1
 kids 0
 OBJECT poly
-name "TuMk 2993"
-texture "turn50R.rgb"
+name "TuMk 2992"
+texture "turn100R.rgb"
 numvert 4
-1458.54 37.1416 -881.78
-1456.61 37.1416 -879.482
-1458.54 39.1416 -881.78
-1456.61 39.1416 -879.482
+1251.35 26.087 -871.118
+1252.85 26.087 -868.52
+1251.35 28.087 -871.118
+1252.85 28.087 -868.52
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 2994"
+texture "back-sign.rgb"
+numvert 4
+1252.85 26.087 -868.52
+1251.35 26.087 -871.118
+1252.85 28.087 -868.52
+1251.35 28.087 -871.118
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97244,20 +97266,20 @@ refs 3
 kids 0
 OBJECT poly
 name "TuMk 2995"
-texture "turn50L.rgb"
+texture "turn50R.rgb"
 numvert 4
-1213.5 9.46956 -635.617
-1213.24 9.46956 -638.606
-1213.5 11.4696 -635.617
-1213.24 11.4696 -638.606
+1458.54 37.1416 -881.78
+1456.61 37.1416 -879.482
+1458.54 39.1416 -881.78
+1456.61 39.1416 -879.482
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97266,20 +97288,20 @@ refs 3
 kids 0
 OBJECT poly
 name "TuMk 2997"
-texture "turn100L.rgb"
+texture "back-sign.rgb"
 numvert 4
-1263.31 6.73372 -639.975
-1263.05 6.73372 -642.964
-1263.31 8.73372 -639.975
-1263.05 8.73372 -642.964
+1456.61 37.1416 -879.482
+1458.54 37.1416 -881.78
+1456.61 39.1416 -879.482
+1458.54 39.1416 -881.78
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97287,21 +97309,43 @@ refs 3
 3 1 1
 kids 0
 OBJECT poly
-name "TuMk 2999"
-texture "turn150L.rgb"
+name "TuMk 2998"
+texture "turn50L.rgb"
 numvert 4
-1313.12 9.40152 -644.333
-1312.86 9.40152 -647.321
-1313.12 11.4015 -644.333
-1312.86 11.4015 -647.321
+1213.5 9.46956 -635.617
+1213.24 9.46956 -638.606
+1213.5 11.4696 -635.617
+1213.24 11.4696 -638.606
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3000"
+texture "back-sign.rgb"
+numvert 4
+1213.24 9.46956 -638.606
+1213.5 9.46956 -635.617
+1213.24 11.4696 -638.606
+1213.5 11.4696 -635.617
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97310,20 +97354,20 @@ refs 3
 kids 0
 OBJECT poly
 name "TuMk 3001"
-texture "turn50R.rgb"
+texture "turn100L.rgb"
 numvert 4
-106.717 7.41145 -9.88553
-107.528 7.41145 -12.7739
-106.717 9.41145 -9.88553
-107.528 9.41145 -12.7739
+1263.31 6.73372 -639.975
+1263.05 6.73372 -642.964
+1263.31 8.73372 -639.975
+1263.05 8.73372 -642.964
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97332,20 +97376,20 @@ refs 3
 kids 0
 OBJECT poly
 name "TuMk 3003"
-texture "turn100R.rgb"
+texture "back-sign.rgb"
 numvert 4
-158.996 5.4305 -2.05905
-159.067 5.4305 -5.05822
-158.996 7.4305 -2.05905
-159.067 7.4305 -5.05822
+1263.05 6.73372 -642.964
+1263.31 6.73372 -639.975
+1263.05 8.73372 -642.964
+1263.31 8.73372 -639.975
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97353,21 +97397,43 @@ refs 3
 3 1 1
 kids 0
 OBJECT poly
-name "TuMk 3005"
-texture "turn50R.rgb"
+name "TuMk 3004"
+texture "turn150L.rgb"
 numvert 4
-92.0048 23.0847 -313.301
-94.6029 23.0847 -311.801
-92.0048 25.0847 -313.301
-94.6029 25.0847 -311.801
+1313.12 9.40152 -644.333
+1312.86 9.40152 -647.321
+1313.12 11.4015 -644.333
+1312.86 11.4015 -647.321
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3006"
+texture "back-sign.rgb"
+numvert 4
+1312.86 9.40152 -647.321
+1313.12 9.40152 -644.333
+1312.86 11.4015 -647.321
+1313.12 11.4015 -644.333
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97376,20 +97442,20 @@ refs 3
 kids 0
 OBJECT poly
 name "TuMk 3007"
-texture "turn50L.rgb"
+texture "turn50R.rgb"
 numvert 4
-289.151 23.4337 -343.984
-288.375 23.4337 -341.086
-289.151 25.4337 -343.984
-288.375 25.4337 -341.086
+106.717 7.41145 -9.88553
+107.528 7.41145 -12.7739
+106.717 9.41145 -9.88553
+107.528 9.41145 -12.7739
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97398,20 +97464,20 @@ refs 3
 kids 0
 OBJECT poly
 name "TuMk 3009"
-texture "turn50L.rgb"
+texture "back-sign.rgb"
 numvert 4
-523.15 23.5564 -490.376
-525.448 23.5564 -488.448
-523.15 25.5564 -490.376
-525.448 25.5564 -488.448
+107.528 7.41145 -12.7739
+106.717 7.41145 -9.88553
+107.528 9.41145 -12.7739
+106.717 9.41145 -9.88553
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97419,21 +97485,43 @@ refs 3
 3 1 1
 kids 0
 OBJECT poly
-name "TuMk 3011"
-texture "turn100L.rgb"
+name "TuMk 3010"
+texture "turn100R.rgb"
 numvert 4
-491.01 23.5564 -452.074
-493.309 23.5564 -450.145
-491.01 25.5564 -452.074
-493.309 25.5564 -450.145
+158.996 5.4305 -2.05905
+159.067 5.4305 -5.05822
+158.996 7.4305 -2.05905
+159.067 7.4305 -5.05822
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3012"
+texture "back-sign.rgb"
+numvert 4
+159.067 5.4305 -5.05822
+158.996 5.4305 -2.05905
+159.067 7.4305 -5.05822
+158.996 7.4305 -2.05905
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97442,20 +97530,20 @@ refs 3
 kids 0
 OBJECT poly
 name "TuMk 3013"
-texture "turn150L.rgb"
+texture "turn50R.rgb"
 numvert 4
-458.871 23.5564 -413.771
-461.169 23.5564 -411.843
-458.871 25.5564 -413.771
-461.169 25.5564 -411.843
+92.0048 23.0847 -313.301
+94.6029 23.0847 -311.801
+92.0048 25.0847 -313.301
+94.6029 25.0847 -311.801
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97464,20 +97552,20 @@ refs 3
 kids 0
 OBJECT poly
 name "TuMk 3015"
-texture "turn50R.rgb"
+texture "back-sign.rgb"
 numvert 4
-149.005 23.8146 -584.463
-149.526 23.8146 -587.417
-149.005 25.8146 -584.463
-149.526 25.8146 -587.417
+94.6029 23.0847 -311.801
+92.0048 23.0847 -313.301
+94.6029 25.0847 -311.801
+92.0048 25.0847 -313.301
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97485,21 +97573,43 @@ refs 3
 3 1 1
 kids 0
 OBJECT poly
-name "TuMk 3017"
-texture "turn100R.rgb"
+name "TuMk 3016"
+texture "turn50L.rgb"
 numvert 4
-198.245 23.613 -575.78
-198.766 23.613 -578.735
-198.245 25.613 -575.78
-198.766 25.613 -578.735
+289.151 23.4337 -343.984
+288.375 23.4337 -341.086
+289.151 25.4337 -343.984
+288.375 25.4337 -341.086
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3018"
+texture "back-sign.rgb"
+numvert 4
+288.375 23.4337 -341.086
+289.151 23.4337 -343.984
+288.375 25.4337 -341.086
+289.151 25.4337 -343.984
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97508,20 +97618,20 @@ refs 3
 kids 0
 OBJECT poly
 name "TuMk 3019"
-texture "turn150R.rgb"
+texture "turn50L.rgb"
 numvert 4
-247.486 23.5038 -567.098
-248.007 23.5038 -570.053
-247.486 25.5038 -567.098
-248.007 25.5038 -570.053
+523.15 23.5564 -490.376
+525.448 23.5564 -488.448
+523.15 25.5564 -490.376
+525.448 25.5564 -488.448
 numsurf 2
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 0 0 0
 1 1 0
 2 0 1
-SURF 0x30
+SURF 0x10
 mat 0
 refs 3
 2 0 1
@@ -97529,7 +97639,249 @@ refs 3
 3 1 1
 kids 0
 OBJECT poly
-name "StBg 3021"
+name "TuMk 3021"
+texture "back-sign.rgb"
+numvert 4
+525.448 23.5564 -488.448
+523.15 23.5564 -490.376
+525.448 25.5564 -488.448
+523.15 25.5564 -490.376
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3022"
+texture "turn100L.rgb"
+numvert 4
+491.01 23.5564 -452.074
+493.309 23.5564 -450.145
+491.01 25.5564 -452.074
+493.309 25.5564 -450.145
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3024"
+texture "back-sign.rgb"
+numvert 4
+493.309 23.5564 -450.145
+491.01 23.5564 -452.074
+493.309 25.5564 -450.145
+491.01 25.5564 -452.074
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3025"
+texture "turn150L.rgb"
+numvert 4
+458.871 23.5564 -413.771
+461.169 23.5564 -411.843
+458.871 25.5564 -413.771
+461.169 25.5564 -411.843
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3027"
+texture "back-sign.rgb"
+numvert 4
+461.169 23.5564 -411.843
+458.871 23.5564 -413.771
+461.169 25.5564 -411.843
+458.871 25.5564 -413.771
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3028"
+texture "turn50R.rgb"
+numvert 4
+149.005 23.8146 -584.463
+149.526 23.8146 -587.417
+149.005 25.8146 -584.463
+149.526 25.8146 -587.417
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3030"
+texture "back-sign.rgb"
+numvert 4
+149.526 23.8146 -587.417
+149.005 23.8146 -584.463
+149.526 25.8146 -587.417
+149.005 25.8146 -584.463
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3031"
+texture "turn100R.rgb"
+numvert 4
+198.245 23.613 -575.78
+198.766 23.613 -578.735
+198.245 25.613 -575.78
+198.766 25.613 -578.735
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3033"
+texture "back-sign.rgb"
+numvert 4
+198.766 23.613 -578.735
+198.245 23.613 -575.78
+198.766 25.613 -578.735
+198.245 25.613 -575.78
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3034"
+texture "turn150R.rgb"
+numvert 4
+247.486 23.5038 -567.098
+248.007 23.5038 -570.053
+247.486 25.5038 -567.098
+248.007 25.5038 -570.053
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "TuMk 3036"
+texture "back-sign.rgb"
+numvert 4
+248.007 23.5038 -570.053
+247.486 23.5038 -567.098
+248.007 25.5038 -570.053
+247.486 25.5038 -567.098
+numsurf 2
+SURF 0x10
+mat 0
+refs 3
+0 0 0
+1 1 0
+2 0 1
+SURF 0x10
+mat 0
+refs 3
+2 0 1
+1 1 0
+3 1 1
+kids 0
+OBJECT poly
+name "StBg 3037"
 texture "pylon1.rgb"
 numvert 10
 740.75 22.0847 -778.587
@@ -97593,7 +97945,7 @@ refs 3
 9 4 1
 kids 0
 OBJECT poly
-name "StBg 3022"
+name "StBg 3038"
 texture "pylon2.rgb"
 numvert 12
 740.75 28.0847 -778.587
@@ -97671,7 +98023,7 @@ refs 3
 11 4 1
 kids 0
 OBJECT poly
-name "StBg 3023"
+name "StBg 3039"
 texture "pylon1.rgb"
 numvert 10
 740.75 22.0847 -816.787
@@ -97735,7 +98087,7 @@ refs 3
 9 4 1
 kids 0
 OBJECT poly
-name "StBg 3024"
+name "StBg 3040"
 texture "pylon2.rgb"
 numvert 12
 740.75 30.0847 -818.787
@@ -97813,7 +98165,7 @@ refs 3
 11 4 1
 kids 0
 OBJECT poly
-name "StBg 3025"
+name "StBg 3041"
 texture "pylon3.rgb"
 numvert 6
 740.75 28.0847 -816.787
@@ -97849,7 +98201,7 @@ refs 3
 5 1 2
 kids 0
 OBJECT poly
-name "StBg 3026"
+name "StBg 3042"
 texture "pylon3.rgb"
 numvert 4
 742.75 30.0847 -778.587
@@ -97871,7 +98223,7 @@ refs 3
 3 1 0
 kids 0
 OBJECT poly
-name "StBg 3027"
+name "StBg 3043"
 texture "pylon1.rgb"
 numvert 4
 742.75 28.0847 -778.587
@@ -97893,7 +98245,7 @@ refs 3
 3 1 0
 kids 0
 OBJECT poly
-name "Pits 3028"
+name "Pits 3044"
 texture "concrete2.rgb"
 numvert 6
 620.75 26.8847 -778.889
@@ -97929,7 +98281,7 @@ refs 3
 5 11 0
 kids 0
 OBJECT poly
-name "Pits 3030"
+name "Pits 3046"
 texture "concrete.rgb"
 numvert 10
 635.75 26.8847 -778.689
@@ -97993,7 +98345,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3032"
+name "Pits 3048"
 texture "concrete.rgb"
 numvert 10
 650.75 26.8847 -778.689
@@ -98057,7 +98409,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3034"
+name "Pits 3050"
 texture "concrete.rgb"
 numvert 10
 665.75 26.8847 -778.689
@@ -98121,7 +98473,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3036"
+name "Pits 3052"
 texture "concrete.rgb"
 numvert 10
 680.75 26.8847 -778.689
@@ -98185,7 +98537,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3038"
+name "Pits 3054"
 texture "concrete.rgb"
 numvert 10
 695.75 26.8847 -778.689
@@ -98249,7 +98601,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3040"
+name "Pits 3056"
 texture "concrete.rgb"
 numvert 10
 710.75 26.8847 -778.689
@@ -98313,7 +98665,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3042"
+name "Pits 3058"
 texture "concrete.rgb"
 numvert 10
 725.75 26.8847 -778.689
@@ -98377,7 +98729,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3044"
+name "Pits 3060"
 texture "concrete.rgb"
 numvert 10
 740.75 26.8847 -778.689
@@ -98441,7 +98793,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3046"
+name "Pits 3062"
 texture "concrete.rgb"
 numvert 10
 755.75 26.8847 -778.687
@@ -98505,7 +98857,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3048"
+name "Pits 3064"
 texture "concrete.rgb"
 numvert 10
 770.75 26.8847 -778.687
@@ -98569,7 +98921,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3050"
+name "Pits 3066"
 texture "concrete.rgb"
 numvert 10
 785.75 26.8847 -778.687
@@ -98633,7 +98985,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3052"
+name "Pits 3068"
 texture "concrete.rgb"
 numvert 10
 800.75 26.8847 -778.687
@@ -98697,7 +99049,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3054"
+name "Pits 3070"
 texture "concrete.rgb"
 numvert 10
 815.75 26.8847 -778.687
@@ -98761,7 +99113,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3056"
+name "Pits 3072"
 texture "concrete.rgb"
 numvert 10
 830.75 26.8847 -778.687
@@ -98825,7 +99177,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3058"
+name "Pits 3074"
 texture "concrete.rgb"
 numvert 10
 845.75 26.8847 -778.687
@@ -98889,7 +99241,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3060"
+name "Pits 3076"
 texture "concrete.rgb"
 numvert 10
 860.75 26.8847 -778.687
@@ -98953,7 +99305,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3062"
+name "Pits 3078"
 texture "concrete.rgb"
 numvert 10
 875.75 26.8847 -778.687
@@ -99017,7 +99369,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3064"
+name "Pits 3080"
 texture "concrete.rgb"
 numvert 10
 890.75 26.8847 -778.687
@@ -99081,7 +99433,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3066"
+name "Pits 3082"
 texture "concrete.rgb"
 numvert 10
 905.75 26.8847 -778.687
@@ -99145,7 +99497,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3068"
+name "Pits 3084"
 texture "concrete.rgb"
 numvert 10
 920.75 26.8847 -778.687
@@ -99209,7 +99561,7 @@ refs 3
 9 15 15.4
 kids 0
 OBJECT poly
-name "Pits 3070"
+name "Pits 3086"
 texture "concrete2.rgb"
 numvert 6
 920.75 26.8847 -778.887
