--- a/torcs/torcs/data/data/objects/tree16.ac
+++ b/torcs/torcs/data/data/objects/tree16.ac
@@ -5,7 +5,7 @@ kids 1
 OBJECT poly
 name "rect"
 loc 0 11.5 0
-texture "/home/torcs/runtime3/games/torcs/eee/tree16.rgb"
+texture "tree16.rgb"
 numvert 8
 -4 11.5 0
 4 11.5 0
