--- a/torcs/torcs/data/data/objects/tree17.ac
+++ b/torcs/torcs/data/data/objects/tree17.ac
@@ -5,7 +5,7 @@ kids 1
 OBJECT poly
 name "rect"
 loc 0 11.5 0
-texture "/home/torcs/runtime3/games/torcs/eee/tree17.rgb"
+texture "tree17.rgb"
 numvert 8
 -4.5 11.5 0
 4.5 11.5 0
