--- a/torcs/torcs/data/data/objects/tree2.ac
+++ b/torcs/torcs/data/data/objects/tree2.ac
@@ -5,7 +5,7 @@ kids 1
 OBJECT poly
 name "rect"
 loc 0 8 0
-texture "/home/torcs/runtime3/games/torcs/eee/tree2.rgb"
+texture "tree2.rgb"
 numvert 8
 -7.5 8 0
 7.5 8 0
