--- a/torcs/torcs/data/data/objects/tree3.ac
+++ b/torcs/torcs/data/data/objects/tree3.ac
@@ -5,7 +5,7 @@ kids 1
 OBJECT poly
 name "rect"
 loc 0 10.5 0
-texture "/home/torcs/runtime3/games/torcs/eee/tree3.rgb"
+texture "tree3.rgb"
 numvert 8
 -8.5 10.5 0
 8.5 10.5 0
