--- a/torcs/torcs/data/data/objects/tree5.ac
+++ b/torcs/torcs/data/data/objects/tree5.ac
@@ -5,7 +5,7 @@ kids 1
 OBJECT poly
 name "rect"
 loc 0 9.5 0
-texture "/home/torcs/runtime3/games/torcs/eee/tree5.rgb"
+texture "tree5.rgb"
 numvert 8
 -9 9.5 0
 9 9.5 0
