--- a/torcs/torcs/data/data/objects/tree9.ac
+++ b/torcs/torcs/data/data/objects/tree9.ac
@@ -5,7 +5,7 @@ kids 1
 OBJECT poly
 name "rect"
 loc 0 9.5 0
-texture "/home/torcs/runtime3/games/torcs/eee/tree9.rgb"
+texture "tree9.rgb"
 numvert 8
 -8.5 9.5 0
 8.5 9.5 0
