--- a/torcs/torcs/src/drivers/K1999/Makefile
+++ b/torcs/torcs/src/drivers/K1999/Makefile
@@ -17,9 +17,9 @@
 
 ROBOT = K1999
 
-SOLIBRARY = ${ROBOT}.so
+MODULE    = ${ROBOT}.so
 
-SOLIBDIR  = drivers/${ROBOT}
+MODULEDIR = drivers/${ROBOT}
 
 SOURCES   = ${ROBOT}.cpp
 
