--- a/torcs/torcs/src/drivers/berniw/Makefile
+++ b/torcs/torcs/src/drivers/berniw/Makefile
@@ -1,8 +1,8 @@
 ROBOT = berniw
 
-SOLIBRARY = ${ROBOT}.so
+MODULE    = ${ROBOT}.so
 
-SOLIBDIR  = drivers/${ROBOT}
+MODULEDIR = drivers/${ROBOT}
 
 SOURCES   = ${ROBOT}.cpp spline.cpp trackdesc.cpp pathfinder.cpp mycar.cpp
 
