--- a/torcs/torcs/src/drivers/cylos1/Makefile
+++ b/torcs/torcs/src/drivers/cylos1/Makefile
@@ -6,9 +6,9 @@
 
 ROBOT = cylos1
 
-SOLIBRARY = ${ROBOT}.so
+MODULE    = ${ROBOT}.so
 
-SOLIBDIR  = drivers/${ROBOT}
+MODULEDIR = drivers/${ROBOT}
 
 SOURCES   = ${ROBOT}.cpp common.cpp
 
