--- a/torcs/torcs/src/drivers/human/Makefile
+++ b/torcs/torcs/src/drivers/human/Makefile
@@ -18,9 +18,9 @@
 
 ROBOT = human
 
-SOLIBRARY = ${ROBOT}.so
+MODULE    = ${ROBOT}.so
 
-SOLIBDIR  = drivers/${ROBOT}
+MODULEDIR = drivers/${ROBOT}
 
 LIBS      =  -lplibul
 
