--- a/torcs/torcs/src/drivers/inferno/Makefile
+++ b/torcs/torcs/src/drivers/inferno/Makefile
@@ -16,11 +16,11 @@
 ##############################################################################
 
 
-ROBOT = inferno
+ROBOT     = inferno
 
-SOLIBRARY = ${ROBOT}.so
+MODULE    = ${ROBOT}.so
 
-SOLIBDIR  = drivers/${ROBOT}
+MODULEDIR = drivers/${ROBOT}
 
 SOURCES   = ${ROBOT}.cpp common.cpp
 
