--- a/torcs/torcs/src/drivers/lliaw/Makefile
+++ b/torcs/torcs/src/drivers/lliaw/Makefile
@@ -18,9 +18,9 @@
 
 ROBOT = lliaw
 
-SOLIBRARY = ${ROBOT}.so
+MODULE    = ${ROBOT}.so
 
-SOLIBDIR  = drivers/${ROBOT}
+MODULEDIR = drivers/${ROBOT}
 
 SOURCES   = ${ROBOT}.cpp
 
