--- a/torcs/torcs/src/drivers/tita/Makefile
+++ b/torcs/torcs/src/drivers/tita/Makefile
@@ -18,9 +18,9 @@
 
 ROBOT = tita
 
-SOLIBRARY = ${ROBOT}.so
+MODULE    = ${ROBOT}.so
 
-SOLIBDIR  = drivers/${ROBOT}
+MODULEDIR = drivers/${ROBOT}
 
 SOURCES   = ${ROBOT}.cpp common.cpp
 
