--- a/torcs/torcs/src/libs/torcs/Makefile
+++ b/torcs/torcs/src/libs/torcs/Makefile
@@ -18,7 +18,7 @@
 
 SOLIBRARY = libtorcs.so
 
-SOLIBDIR  = lib
+SOLIBDIR  = .
 
 SOURCES   = entry.cpp mainmenu.cpp splash.cpp raceman.cpp exitmenu.cpp optionmenu.cpp driverconfig.cpp joystickconfig.cpp
 
