--- a/torcs/torcs/src/modules/track/Makefile
+++ b/torcs/torcs/src/modules/track/Makefile
@@ -16,9 +16,9 @@
 ##############################################################################
 
 
-SOLIBRARY = track.so
+MODULE    = track.so
 
-SOLIBDIR  = modules/track
+MODULEDIR = modules/track
 
 SOURCES   = track.cpp trackitf.cpp trackutil.cpp track0.cpp track1.cpp track2.cpp track3.cpp
 
