--- a/torcs/torcs/src/tools/launcher/torcs.in
+++ b/torcs/torcs/src/tools/launcher/torcs.in
@@ -19,8 +19,10 @@
 
 DEFAULT_RUNTIME=@prefix@/games/@PACKAGE@
 
-modprobe evdev >/dev/null 2>&1
-modprobe joydev >/dev/null 2>&1
+modprobe usb-uhci  >/dev/null 2>&1
+modprobe hid       >/dev/null 2>&1
+modprobe evdev     >/dev/null 2>&1
+modprobe joydev    >/dev/null 2>&1
 
 if [ -d $DEFAULT_RUNTIME ]
 then
