*** empty log message ***

--- a/torcs/torcs/src/drivers/berniw/2/Makefile
+++ b/torcs/torcs/src/drivers/berniw/2/Makefile
@@ -20,7 +20,7 @@ ROBOT = berniw
 
 DATADIR   = drivers/${ROBOT}/2
 
-DATA      = $(shell find *.xml -maxdepth 0 -type f -print) cg-nascar-rwd.rgb
+DATA      = cg-nascar-rwd.rgb $(shell find *.xml -maxdepth 0 -type f -print)
 
 include ${MAKE_DEFAULT}
 
